--- a/result.html
+++ b/result.html
@@ -208,7 +208,7 @@
         </div> -->
     </div>
     <script type="module" src="js/result_logic.js"></script>
-    <script type="module" src="firebaseConfig.js"></script>
+    <script type="module" src="js/core/services/credentials/v1/config/firebaseConfig.js"></script>
 </body>
 
 </html>
