--- a/start.html
+++ b/start.html
@@ -274,7 +274,7 @@
 
     </script>
 
-    <script type="module" src="js/firebaseConfig.js"></script>
+    <script type="module" src="js/core/services/credentials/v1/config/firebaseConfig.js"></script>
     <script type="module" src="js/main_logic.js"></script>
     <script>
         // На странице start.html
